# Ddareungi_analysis

./: .gitignore  README.md  check_.py  insight.html  pyproject.toml
data/: bcycle_master_location.csv  merged_2020.parquet  merged_2021.parquet  merged_2022.parquet  merged_2023.parquet  merged_2024.parquet  merged_2025.parquet  registered_population.csv
data/01/: summary_daily_hourly_2020.parquet  summary_daily_hourly_2024.parquet  summary_daily_hourly_2025.parquet  summary_monthly_2021.parquet  summary_monthly_2022.parquet  summary_monthly_2025.parquet
data/02/: distance_time_2020.parquet  distance_time_2021.parquet  distance_time_2022.parquet  distance_time_2023.parquet  distance_time_2024.parquet  distance_time_2025.parquet  yearly_detailed_summary.json  yearly_summary.parquet
data/03/: route_summary.parquet  station_summary.parquet
data/summary/: summary_daily_hourly_2021.parquet  summary_daily_hourly_2022.parquet  summary_daily_hourly_2023.parquet  summary_monthly_2020.parquet  summary_monthly_2023.parquet  summary_monthly_2024.parquet
maps/: final_routes_map_osm.html  interactive_station_map.html
specs/: data-model.md  spec.md
specs/001-vs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: data_load.py  main.py  summary_data_load.py
src/analyse/: distance_time_analyse.py  population_analyse.py  routes_analyse.py  station_analyse.py
src/check/: check.py
src/data_mart/: distance_time_preprocessing.py  sample_data.py
src/load_data/: data_load.py  distance_data_load.py  station_route_data_load.py  summary_data_load.py
(+85 files in other folders)
