[project]
name = "sesac-ddareungi-analysis"
version = "0.1.0"
description = "Report on the Efficiency of Use of ddareungi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "ruff>=0.1.0", 
    "pytest-mock>=3.15.0",
    "pyarrow>=21.0.0",
    "branca>=0.8.1",
]

[tool.ruff]
lint.select = ["E", "F", "I"]
exclude = ["notebooks/*.ipynb"] # Exclude Jupyter notebooks
